partman-auto (89) UNRELEASED; urgency=low

  * Upgrade to debhelper v7.

 -- Colin Watson <cjwatson@debian.org>  Thu, 27 Aug 2009 00:39:31 +0100

partman-auto (88) unstable; urgency=low

  [ Colin Watson ]
  * Move "Guided partitioning" above "Configure software RAID"; it seems
    more natural at the top of the choose_partition menu.

  [ Aurelien Jarno ]
  * Recognize ufs as an allowed partition type.
  * Depends on partman-ext3 on Linux only and on partman-ufs on kFreeBSD only
    (iow on the default filesystem).

  [ Updated translations ]
  * Basque (eu.po) by Piarres Beobide
  * Italian (it.po) by Milo Casagrande

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 22 Aug 2009 18:48:18 +0200

partman-auto (87) unstable; urgency=low

  * Add support for writing sizes as a number plus a percentage of RAM, e.g.
    "2000+50%". This is useful when doing automatic partitioning with the
    expectation of creating swap files.
  * If we're creating primary partitions and find that we've reached the end
    of the recipe, use "full" rather than "beginning" as the place passed to
    NEW_PARTITION, thereby avoiding rounding problems and matching the
    process for creating logical partitions (closes: #516347, LP: #287571).

  [ Updated translations ]
  * Hindi (hi.po)

 -- Colin Watson <cjwatson@debian.org>  Tue, 14 Jul 2009 14:35:51 +0100

partman-auto (86) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Only ensure that there is at least one primary partition after
      autopartitioning on partition tables that use extended partitions.

  [ Updated translations ]
  * Bengali (bn.po) by Md. Rezwan Shahid
  * Estonian (et.po) by Mattias Põldaru
  * Slovak (sk.po) by Ivan Masár

 -- Christian Perrier <bubulle@debian.org>  Fri, 12 Jun 2009 07:03:33 +0200

partman-auto (85) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Add ext4 support.
    - Add support for $default_filesystem as the partition type in a recipe,