@@ -1,5 +1,9 @@
 partman-auto/text/multi_scheme ::
 
+1 1 1 free
+	$iflabel{ gpt }
+	method{ biosgrub } .
+
 128 512 256 ext2
 	$defaultignore{ }
 	$primary{ }
