@@ -1,6 +1,9 @@
 partman-auto (89) UNRELEASED; urgency=low
 
   * Upgrade to debhelper v7.
+  * Add a biosgrub partition to default recipes, used only if the disk label
+    is GPT (closes: #491376). Requires partman-partitioning 71. Thanks to
+    Otavio Salvador for reviewing this.
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 27 Aug 2009 00:39:31 +0100
 
